
* LUCENE-10561 Reduce class/member visibility of all normalizer and stemmer classes. (Rushabh Shah)

New Features
---------------------

* LUCENE-10010 Introduce NFARunAutomaton to run NFA directly. (Patrick Zhai)

Improvements
---------------------

* LUCENE-10416: Update Korean Dictionary to mecab-ko-dic-2.1.1-20180720 for Nori.
  (Uihyun Kim)

Optimizations
---------------------
(No changes)

Bug Fixes
---------------------

(No changes)

Other
---------------------
* LUCENE-10283: The minimum required Java version was bumped from 11 to 17.
  (Adrien Grand, Uwe Schindler, Dawid Weiss, Robert Muir)

* LUCENE-10253: The @BadApple annotation has been removed from the test
  framework. (Adrien Grand)

* LUCENE-10393: Unify binary dictionary and dictionary writer in Kuromoji and Nori.
  (Tomoko Uchida, Robert Muir)

* LUCENE-10475: Merge dictionary builders in `util` package into `dict` package in Kuromoji and Nori.
  All classes in `org.apache.lucene.analysis.[ja|ko].util` was moved to `org.apache.lucene.analysis.[ja|ko].dict`.
  (Tomoko Uchida)

* LUCENE-10493: Factor out Viterbi algorithm in Kuromoji and Nori to analysis-common. (Tomoko Uchida)

======================= Lucene 9.2.0 =======================

API Changes
---------------------

* LUCENE-10325: Facets API extended to support getTopFacets. (Yuting Gan)

* LUCENE-10482: Allow users to create their own DirectoryTaxonomyReaders with empty taxoArrays instead of letting the
  taxoEpoch decide. Add a test case that demonstrates the inconsistencies caused when you reuse taxoArrays on older
  checkpoints. (Gautam Worah)

* LUCENE-10558: Add new constructors to Kuromoji and Nori dictionary classes to support classpath /
  module system usage. It is now possible to use JDK's Class/ClassLoader/Module#getResource(...) apis
  and pass their returned URL to dictionary constructors to load resources from Classpath or Module
  resources. (Uwe Schindler, Tomoko Uchida, Mike Sokolov)

New Features
---------------------
